--- a/style.css
+++ b/style.css
@@ -3,26 +3,17 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: black;
 }
 
 #container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: 480px;
     width: 480px;
-    outline: 1px solid black;
+    outline: 1px solid grey;
 }
 
 #wide {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#tall {
-    border: 0px;
-    margin: 0px;
-    text-align: center;
 }
